--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ conference:
   hosts:
   
   room: Room
-  venue: Convention Centre
-  location: City, Country
+  venue: The University of Sheffield
+  location: Sheffield, UK
   name: Gaussian Process and Uncertainty Quantification Summer School
   year: 2017
   month: September
@@ -52,10 +52,10 @@ conference:
   - 2017-09-13
   - 2017-09-14
   organizers:
-  - {name: Javier Gonzalez, url: "http://javiergonzalezh.github.io/"}
-  - {name: Richard Wilkinson, url: "http://r-wilkinson.staff.shef.ac.uk/"}
-  - {name: Jeremy Oakley, url: "http://www.jeremy-oakley.staff.shef.ac.uk/"}
-  - {name: Neil Lawrence, url: "http://inverseprobability.com"}
+  - {name: Javier Gonzalez, url: "http://javiergonzalezh.github.io/", institute: Amazon Cambridge Research}
+  - {name: Richard Wilkinson, url: "http://r-wilkinson.staff.shef.ac.uk/", institute: University of Sheffield}
+  - {name: Jeremy Oakley, url: "http://www.jeremy-oakley.staff.shef.ac.uk/", institute: Amazon Cambridge Research}
+  - {name: Neil Lawrence, url: "http://inverseprobability.com", institute: Amazon Cambridge Research and University of Sheffield}
   - {name: Sheffield ML Group, url: "http://sheffieldml.github.io"}
   sponsors:
   - name:
