--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,7 @@ conference:
   - 2017-09-14
   organizers:
   - {name: Javier Gonzalez, url: "http://javiergonzalezh.github.io/", institute: Amazon Cambridge Research}
+  - {name: Mauricio Alvarez, url: "https://sites.google.com/site/maalvarezl/", institute: University of Sheffield}
   - {name: Richard Wilkinson, url: "http://r-wilkinson.staff.shef.ac.uk/", institute: University of Sheffield}
   - {name: Jeremy Oakley, url: "http://www.jeremy-oakley.staff.shef.ac.uk/", institute: Amazon Cambridge Research}
   - {name: Neil Lawrence, url: "http://inverseprobability.com", institute: Amazon Cambridge Research and University of Sheffield}
