Add previous meeting link.

--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,10 @@ conference:
   - name:
     url:
 
+previous_meeting:
+  name: Gaussian Process Summer School, 2016
+  url: "http://gpss.cc/gpuq16"
+
 map:
   show: False
   mapbox:
