Edit session titles.

--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ conference:
   room: Room
   venue: The University of Sheffield
   location: Sheffield, UK
-  name: Gaussian Process and Uncertainty Quantification Summer School
+  name: Gaussian Process Summer School
   year: 2017
   month: September
   dates:
