--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ conference:
   hide_tentative: true
   hosts:
   
-  room: Room
+  room: Pam Liversidge Building, PLB-E05
   venue: The University of Sheffield
   location: Sheffield, UK
   name: Gaussian Process Summer School
