--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/gpss17" # the subpath of your site, e.g. /blog/
-url: "http://gpss.cc" # the base hostname & protocol for your site
+url: "https://gpss.cc" # the base hostname & protocol for your site
 twitter_username: datascienceshef
 github_username:  gpschool
 plugins:
@@ -61,20 +61,20 @@ conference:
   chairs:
   - type: Organizers
     people:
-    - {given: Javier, family: Gonzalez, url: "http://javiergonzalezh.github.io/", institute: Amazon Research Cambridge}
+    - {given: Javier, family: Gonzalez, url: "https://javiergonzalezh.github.io/", institute: Amazon Research Cambridge}
     - {given: Mauricio, family: Alvarez, url: "https://sites.google.com/site/maalvarezl/", institute: University of Sheffield}
-    - {given: Richard, family: Wilkinson, url: "http://r-wilkinson.staff.shef.ac.uk/", institute: University of Sheffield}
-    - {given: Jeremy, family: Oakley, url: "http://www.jeremy-oakley.staff.shef.ac.uk/", institute: University of Sheffield}
-    - {given: Neil D., family: Lawrence, url: "http://inverseprobability.com", institute: Amazon Research Cambridge and University of Sheffield}
+    - {given: Richard, family: Wilkinson, url: "https://r-wilkinson.staff.shef.ac.uk/", institute: University of Sheffield}
+    - {given: Jeremy, family: Oakley, url: "https://www.jeremy-oakley.staff.shef.ac.uk/", institute: University of Sheffield}
+    - {given: Neil D., family: Lawrence, url: "https://inverseprobability.com", institute: Amazon Research Cambridge and University of Sheffield}
     - consortium: 
-      - {name: Sheffield ML Group, url: "http://sheffieldml.github.io"}
+      - {name: Sheffield ML Group, url: "https://sheffieldml.github.io"}
   sponsors:
   - name: The Open Data Science Initiative
-    url: http://opendsi.cc
+    url: https://opendsi.cc
 
 previous_meeting:
   name: Previous School
-  url: "http://gpss.cc/gpuqss16"
+  url: "https://gpss.cc/gpuqss16"
 
 map:
   show: true  
