--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ conference:
     url: https://opendsi.cc
 
 previous_meeting:
-  name: Previous School
+  name: GPSS 2016
   url: "https://gpss.cc/gpuqss16"
 
 map:
